syntax = "proto2";
package protobuf;
import "Profile.proto"; //enum Sport
message Goal {
    optional uint64 id = 1;
    required uint64 player_id = 2;
    optional Sport sport = 3;
    optional string name = 4; // i.e. "Monthly time goal"
    optional GoalType type = 5;
    optional GoalPeriod periodicity = 6;
    optional float target_distance = 7;  //in meters. set to dur for dur goals
    optional float target_duration = 8;  //in minutes. set to dist for dist goals
    optional float actual_distance = 9;  //in meters. is also set for dur goals?
    optional float actual_duration = 10; //in minutes. is also set for dist goals?
    optional uint64 created_on = 11;     //in ms since epoch
    optional uint64 period_end_date = 12;
    optional GoalStatus status = 13;
    optional string timezone = 14;
}
message Goals {
    repeated Goal goals = 1;
}
enum GoalType {
    DISTANCE = 0;
    TIME = 1;
}
enum GoalPeriod {
    WEEKLY = 0;
    MONTHLY = 1;
}
enum GoalStatus {
    ACTIVE = 0;
    RETIRED = 1;
}
message GoalHistory {
    repeated GoalHistoryPeriod items = 1;
}
message GoalHistoryPeriod {
    optional uint64 f1 = 1;
    optional uint64 f2 = 2;
    optional uint64 f3 = 3;
    optional Sport sport = 4;
    optional string f5 = 5;
    optional uint64 f6 = 6; //enum <=1
    optional uint64 f7 = 7; //enum <=1
    optional float f8 = 8;
    optional float f9 = 9;
    optional float f10 = 10;
    optional float f11 = 11;
    optional uint64 f12 = 12;
}
